<resources>
    <string name="app_name">Patting</string>
    <string name="title">female pug 34 days</string>
    <string name="cost">5000</string>
    <string name="created_at">Jan 10th,2015 12:05 am</string>
    <string name="views_count">Views Count : 500</string>
    <string name="disc">I have new born 34 days female pawn pug, healthy and dewarming</string>
    <string name="post_pet_type">Pet type</string>
    <string name="post_pet_cate">Pet category</string>
    <string name="post_pet_breed">Pet breed(Optional)</string>
    <string name="post_pet_size">Pet size(Optional)</string>
    <string name="post_pet_gender">Pet gender(Optional)</string>
    <string name="post_pet_age">Pet age(Optional)</string>
    <string name="submit">SUBMIT</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="clear_all">Clear all</string>
    <string name="apply">Apply</string>
    <string-array name="pets_array">
        <item>Dog</item>
        <item>Cat</item>
        <item>Birds</item>
        <item>Squirrel</item>
        <item>Rabbit</item>
    </string-array>

    <string-array name="cate_array">
        <item>Sell</item>
        <item>Adopt</item>
        <item>Lost</item>
        <item>Found</item>
    </string-array>
    <string-array name="pets_size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
        <item>XX-Large</item>
    </string-array>
    <string-array name="pets_gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pets_age_array">
        <item>1- 6 Months</item>
        <item>7- 12 Months</item>
        <item>1- 3 Years</item>
        <item>4- 6 Years</item>
        <item>7- 9 Years</item>
        <item>10 Years Above</item>
    </string-array>
    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>
    <string name="add_photos">Tap to add photos</string>
</resources>
