<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/clearAllTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/clear_all" />

    <TextView
        android:id="@+id/applyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:text="@string/apply" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/applyTxt">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/petsTypeSpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/post_pet_type"
                app:ms_hint="@string/post_pet_type"
                app:ms_multiline="false" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/cateSpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/post_pet_cate"
                app:ms_hint="@string/post_pet_cate"
                app:ms_multiline="false" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/breedSpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/post_pet_breed"
                app:ms_hint="@string/post_pet_breed"
                app:ms_multiline="false" />


            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/sizeSpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/post_pet_size"
                app:ms_hint="@string/post_pet_size"
                app:ms_multiline="false" />


            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/genderSpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/post_pet_gender"
                app:ms_hint="@string/post_pet_gender"
                app:ms_multiline="false" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ageSpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/post_pet_age"
                app:ms_hint="@string/post_pet_age"
                app:ms_multiline="false" />

            <com.appyvet.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rangebar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                custom:pinMaxFont="10sp"
                custom:temporaryPins="false"
                custom:tickEnd="1000"
                custom:tickInterval="1"
                custom:tickStart="1" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/stateSpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/select_state"
                app:ms_hint="@string/select_state"
                app:ms_multiline="false" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/citySpnr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/spinner_base_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="#0000FF"
                app:ms_floatingLabelText="@string/select_city"
                app:ms_hint="@string/select_city"
                app:ms_multiline="false" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>