<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    >

    <ScrollView
        android:id="@+id/artcilesScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="false"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/totLay1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/totLay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/discLay"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/pagerr"
                        android:layout_width="fill_parent"
                        android:layout_height="300dp"
                        android:fitsSystemWindows="true" />

                    <mobile.patting.Design.CirclePageIndicator
                        android:id="@+id/mindicator"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/btmLay"
                        android:layout_marginBottom="20dp"
                        android:padding="8dp" />


                    <RelativeLayout
                        android:id="@+id/comentsView"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center|left"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/cost"
                            android:textColor="#AEEA00"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/titlePet"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.0"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/title"
                        android:textColor="#202830"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeCreatedBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/created_at"
                        android:textColor="#C0C0C0"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/discrptionPet"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/disc"
                        android:textColor="#1F1F1F"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <include layout="@layout/contact_details"></include>

                    <TextView
                        android:id="@+id/viewsCount"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="40dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/views_count"
                        android:textColor="#1F1F1F"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/callsms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/callLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/callImg"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_call" />

            <TextView
                android:id="@+id/callTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="Call"
                android:textColor="#959BA3"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/smsLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/smsImg"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_call" />

            <TextView
                android:id="@+id/valueAttr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="SMS"
                android:textColor="#959BA3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/msgLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/messageImg"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_call" />

            <TextView
                android:id="@+id/valueeAttr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="Message"
                android:textColor="#959BA3"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>